--- a/activebox.html
+++ b/activebox.html
@@ -55,37 +55,37 @@
         <div class="features__container">
             <div class="features__block">
                 <div class="features__item">
-                    <div class="features__img icon_1" href="#"><img src="assets/img/icon_1.png" alt="icon_1">
+                    <div class="features__img" href="#"><img src="assets/img/icon_1.png" alt="icon_1">
                     </div>
                     <h4 class="features__title">Easily Customised</h4>
                     <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
                 <div class="features__item">
-                    <div class="features__img icon_2" href="#"><img src="assets/img/icon_2.png" alt="icon_2">
+                    <div class="features__img" href="#"><img src="assets/img/icon_2.png" alt="icon_2">
                     </div>
                     <h4 class="features__title">Responsive Ready</h4>
                     <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
                 <div class="features__item">
-                    <div class="features__img icon_3" href="#"><img src="assets/img/icon_3.png" alt="icon_3">
+                    <div class="features__img" href="#"><img src="assets/img/icon_3.png" alt="icon_3">
                     </div>
                     <h4 class="features__title">Modern Design</h4>
                     <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
                 <div class="features__item">
-                    <div class="features__img icon_4" href="#"><img src="assets/img/icon_4.png" alt="icon_4">
+                    <div class="features__img" href="#"><img src="assets/img/icon_4.png" alt="icon_4">
                     </div>
                     <h4 class="features__title">Clean Code</h4>
                     <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
                 <div class="features__item">
-                    <div class="features__img icon_5" href="#"><img src="assets/img/icon_5.png" alt="icon_5">
+                    <div class="features__img" href="#"><img src="assets/img/icon_5.png" alt="icon_5">
                     </div>
                     <h4 class="features__title">Ready to Ship</h4>
                     <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 </div>
                 <div class="features__item">
-                    <div class="features__img icon_6" href="#"><img src="assets/img/icon_6.png" alt="icon_6">
+                    <div class="features__img" href="#"><img src="assets/img/icon_6.png" alt="icon_6">
                     </div>
                     <h4 class="features__title">Download for Free</h4>
                     <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
@@ -97,7 +97,7 @@
     <section class="work__section">
         <div class="work__container">
             <div class="work__item">
-                <div class="work__img work_1" href="#"><img src="assets/img/work_1.png" alt="">
+                <div class="work__img" href="#"><img src="assets/img/work_1.png" alt="">
                 </div>
                 <div class="work__content">
                     <h4 class="work__title">Project Name</h4>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="work__item">
-                <div class="work__img work_2" href="#"><img src="assets/img/work_2.png" alt="">
+                <div class="work__img" href="#"><img src="assets/img/work_2.png" alt="">
                 </div>
                 <div class="work__content">
                     <h4 class="work__title">Project Name</h4>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="work__item">
-                <div class="work__img work_3" href="#"><img src="assets/img/work_3.png" alt="">
+                <div class="work__img" href="#"><img src="assets/img/work_3.png" alt="">
                 </div>
                 <div class="work__content">
                     <h4 class="work__title">Project Name</h4>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="work__item">
-                <div class="work__img work_4" href="#"><img src="assets/img/work_4.png" alt="">
+                <div class="work__img" href="#"><img src="assets/img/work_4.png" alt="">
                 </div>
                 <div class="work__content">
                     <h4 class="work__title">Project Name</h4>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="work__item">
-                <div class="work__img work_5" href="#"><img src="assets/img/work_5.png" alt="">
+                <div class="work__img" href="#"><img src="assets/img/work_5.png" alt="">
                 </div>
                 <div class="work__content">
                     <h4 class="work__title">Project Name</h4>
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="work__item">
-                <div class="work__img work_6" href="#"><img src="assets/img/work_6.png" alt="">
+                <div class="work__img" href="#"><img src="assets/img/work_6.png" alt="">
                 </div>
                 <div class="work__content">
                     <h4 class="work__title">Project Name</h4>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="work__item">
-                <div class="work__img work_7" href="#"><img src="assets/img/work_7.png" alt="">
+                <div class="work__img" href="#"><img src="assets/img/work_7.png" alt="">
                 </div>
                 <div class="work__content">
                     <h4 class="work__title">Project Name</h4>
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="work__item">
-                <div class="work__img work_8" href="#"><img src="assets/img/work_8.png" alt="">
+                <div class="work__img" href="#"><img src="assets/img/work_8.png" alt="">
                 </div>
                 <div class="work__content">
                     <h4 class="work__title">Project Name</h4>
