--- a/activebox.html
+++ b/activebox.html
@@ -16,7 +16,7 @@
         <div class="banner__container">
             <div class="banner__menu">
                 <nav class="menu__nav">
-                    <a class="logo" href="#"><img src="assets/img/logo.png" alt=""></a>
+                    <a class="logo" href="#"><img src="assets/svg/logo.svg" alt=""></a>
                     <ul class="menu__list">
                         <li class="menu__item">
                             <a class="menu__link" href="http://kslsl.ru/asfd">FEATURES</a>
@@ -35,6 +35,8 @@
                         </li>
                     </ul>
                 </nav>
+
+
             </div>
 
             <div class="banner__block">
@@ -93,6 +95,7 @@
             </div>
         </div>
     </section>
+
 
     <section class="work__section">
         <div class="work__container">
@@ -162,6 +165,8 @@
             </div>
         </div>
     </section>
+
+
 
     <section class="team__section">
         <div class="team__container">
@@ -270,7 +275,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>  
 
     <section class="footer__section">
         <div class="footer__information">
@@ -310,8 +315,9 @@
                 </div>
             </div>
         </div> 
-    </section>
-   
-    
+    </section> 
+
+
 </body>
+
 </html>
